--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -11,6 +11,7 @@ jobs:
   playwright-tests:
     name: Playwright Tests
     runs-on: ubuntu-latest
+
     container:
       image: mcr.microsoft.com/playwright:v1.52.0-noble
 
@@ -18,22 +19,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Cache npm dependencies
+      # Cache npm download cache only (safer than node_modules)
+      - name: Cache npm cache
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.npm
-            node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('package.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
 
       - name: Install dependencies
-        run: npm ci
         run: npm install
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
+      # Not needed when using official Playwright container
+      # - name: Install Playwright Browsers
+      #   run: npx playwright install --with-deps chromium
 
       - name: Run Playwright tests
         run: npx playwright test --project=chromium
@@ -42,7 +42,7 @@ jobs:
           PW_TEST_HTML_REPORT_OPEN: never
           TEST_ENV: qe
 
-      - name: Upload Test Results
+      - name: Upload Playwright HTML Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
@@ -54,7 +54,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-results
+          name: allure-results/
           path: allure-results/
           retention-days: 30
 
@@ -73,4 +73,3 @@ jobs:
           name: logs
           path: logs/
           retention-days: 30
-
